# advent_of_code_2021

./: LICENCE  README.md  advent-of-code2021.cabal
app/: Main.hs
day_1/: day_1.hs
day_10/: day_10.hs
day_2/: day_2.hs
day_3/: day_3.hs
day_4/: day_4.hs
day_5/: day_5.hs
day_6/: day_6.hs
day_7/: day_7.hs
day_8/: day_8.hs
day_9/: day_9.hs
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs
