cabal-version:      2.4
name:               advent-of-code2021
version:            0.1.0.0
synopsis:           My solutions for the Advent of Code 2021
license:            MIT
author:             René Moll
maintainer:         github@r-moll.nl

extra-source-files:
    CHANGELOG.md
    README.md

library aoc2021
    build-depends:
          base ^>=4.14.3.0,
          containers,
          split
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
      -Wall
      -O2
      -fprof-auto

    exposed-modules:
      Day01
      Day02
      Day03
      Day04
      Day05
      Day06
      Day07
      Day08
      Day09
      Day10
      Day11
      Day12
      Day13
      Day14
      Day15
      Day16

executable advent-of-code2021
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      base ^>=4.14.3.0,
      aoc2021
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
      -Wall
      -O2
      -threaded
      -fprof-auto
